# Noteerr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_v1.1.0.md  DISTRIBUTION.md  EXAMPLES.md  GITHUB_COMMANDS.md  GITHUB_PUBLISHING.md  INDEX.md  INSTALL.md  INSTALLATION_COMPARISON.md  LICENSE  MANIFEST.in  NEW_FEATURES.md  PACKAGE_MANAGER_READY.md  PROJECT_STRUCTURE.md  PUBLISHING_CHECKLIST.md  QUICKINSTALL.md  QUICKSTART.md  README.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v1.1.0.md  TESTING.md  WINDOWS_SETUP.md  install.bat  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py  test_noteerr.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  release.yml
chocolatey/: noteerr.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
homebrew/: noteerr.rb
scripts/: bash-integration.sh  powershell-integration.ps1  windows-setup-path.ps1  zsh-integration.sh
src/noteerr/: __init__.py  cli.py  models.py  storage.py  utils.py
winget/: YourPublisher.Noteerr.installer.yaml  YourPublisher.Noteerr.locale.en-US.yaml  YourPublisher.Noteerr.yaml
