[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "noteerr"
version = "1.1.0"
description = "A CLI tool to log, annotate, and recall command errors"
readme = "README.md"
authors = [{name = "Naufal"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "colorama>=0.4.4",
    "rich>=10.0.0",
]

[project.scripts]
noteerr = "noteerr.cli:main"

[project.urls]
Homepage = "https://github.com/naufalkmd/Noteerr"
